Applications/PostgreSQL/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    reloader.stakater.com/reload: 'disabled'
    workspace.trust.cert-manager.io/trust-manager-ca: 'true'
