Applications/PostgreSQL/base/resources/network-policy-clients.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clients-to-database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgres-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: ###PRIVATE_NETWORK_CIDR###
      ports:
        - protocol: TCP
          port: 5432
