Applications/PostgreSQL/base/resources/network-policy-monitoring.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-to-database-metrics
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: postgres-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/name: monitoring-agent
              app.kubernetes.io/component: alloy
      ports:
        - protocol: TCP
          port: 9187
